<resources>
    <string name="app_name">NewApplication</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_notifications1">Home</string>
    <string name="title_notifications2">Camara</string>
    <string name="title_notifications3">Notifications4</string>
</resources>
