<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_action_name"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_action_home"
        android:title="@string/title_notifications1" />
    <item
        android:id="@+id/navigation_notifications_view"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_notifications" />


    <item
        android:id="@+id/navigation_notifications_told"
        android:icon="@drawable/ic_action_name"
        android:title="@string/title_notifications2" />
</menu>
